--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ favicon: assets/favicon.ico                             # Icon displayed in the 
 header_text: Maryline Schär  # Change Blog header text
 header_feature_image: assets/img/pexels/triangular.jpeg
 footer_text: >
-  Copyright 2022 - Maryline Schär 
+  Ergo3d - Copyright 2022 - Maryline Schär
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
