--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ baseurl: ""
 domain: ergo3d.ch       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://ergo3d.ch  # the base hostname and protocol for your site, e.g. http://example.com
 # THEME-SPECIFIC CONFIGURATION
-title: Maryline Schär                                        # site's title
-description: "Parce que la santé n'a pas qu'une seule dimension"      # used by search engines
+title: Ergo3d - Maryline Schär - Lausanne et Vevey                                      # site's title
+description: "Ergothérapie, aménagement d'intérieur et sport adapté. Parce que la santé a plusieurs dimensions."      # used by search engines
 avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
-
+lang: fr_CH
 # Header and footer text
 header_text: Maryline Schär  # Change Blog header text
 header_feature_image: assets/img/pexels/triangular.jpeg
