--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl: ""
 domain: ergo3d.ch       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://ergo3d.ch  # the base hostname and protocol for your site, e.g. http://example.com
 # THEME-SPECIFIC CONFIGURATION
-title: Ergo3d - Maryline Schär - Lausanne et Vevey                                      # site's title
+title: Maryline Schär - Ergothérapeute (neurologie à domicile) - Lausanne et Vevey                                      # site's title
 description: "Ergothérapie, aménagement d'intérieur et sport adapté. Parce que la santé a plusieurs dimensions."      # used by search engines
 avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
